--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navba">
+<nav class="navbar navbar-inverse navbar">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/home">NYC Accessible Streets</a>
