--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -2,13 +2,15 @@
 /* navbar styling */
 nav.navbar{
     background-color:#18435A;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 a.nav-brand {
     color: #FFFFFF;
     font-size: 1.5em;
     font-weight: bold;
-    text-decoration: none;
+    text-decoration: none !important;
     height: 75px;
     line-height: 75px;
 }
@@ -29,6 +31,36 @@ a.nav-brand:hover{
 a.nav-list:hover{
     opacity: 0.5;
 }
+
+.padding{
+            text-align: left;
+            padding-left: 30px;
+            padding-right: 25%;
+        }
+        .ctain {
+            width: 100%;
+            position: relative;
+            text-align: center;
+            color: white;
+        }
+        .centered {
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        .boxshadow{
+            box-shadow: 0px 0px 10px 1px gray;
+            padding-left: 5px;
+            padding-right: 5px;
+            margin: 1% 1% 1% 1%;
+            border-radius: 3%;
+        }
+        .imgpadding{
+            text-align: left;
+            padding-left: 30px;
+            padding-right: 30px;
+        }
 /*
 body{
     overflow: hidden;
