Fixed navbar route

--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -6,7 +6,7 @@
 <nav class="navbar navbar-inverse navbar">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="nav-brand" href="/home">NYC Accessible Streets</a>
+            <a class="nav-brand" href="/">NYC Accessible Streets</a>
         </div>
         {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right">
