--- a/landing_map/templates/landing_map/landingpage.html
+++ b/landing_map/templates/landing_map/landingpage.html
@@ -41,8 +41,7 @@
     <div class="ctain">
         <img src="/static/img/crosswalk.png" width="100%">
         <div class="centered"><h1 style=font-size:200%>Find your next accessible destination.</h1>
-        <input type="text" class="mapboxgl-ctrl-geocoder--input" placeholder="type location..." aria-label="Search">
-            <button onclick="location.href = '/home';" type="submit">Search</button>
+            <button onclick="location.href = '/home';" class="btn btn-lg" type="submit">Search</button>
         </div>
     </div>
 <div class="imgpadding">
