--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -1,20 +1,24 @@
-
-<nav class="navbar navbar-inverse">
+<style>
+    .nofade{
+        opacity: 1
+    }
+</style>
+<nav class="navbar navbar-inverse navbar">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
         </div>
         {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right">
-            <li><a class = "nav-list" href="#"> Hi {{user.first_name}}!</a></li>
+            <li><a class = "nav-list nofade" href="#"> Hi {{user.first_name}}!</a></li>
             <li><a class = "nav-list" href="/accounts/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
-            <li><a class = "nav-list" href="/accounts/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+            <li><a class = "nav-list" href="/accounts/logout"><span class="glyphicon glyphicon-arrow-left"></span> Log Out</a></li>
         </ul>
         {% else %}
         <ul class="nav navbar-nav navbar-right">
             <li><a class = "nav-list" href="/accounts/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
             <li><a class = "nav-list" href="/accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a class = "nav-list" href="/accounts/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a class = "nav-list" href="/accounts/login"><span class="glyphicon glyphicon-arrow-right"></span> Login</a></li>
         </ul>
         {% endif %}
     </div>
