--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="container-fluid">
-<nav class="navbar navbar-expand-lg navbar-light bg-custom">
+<nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
   <div class="navbar-header">
     <a class="nav-brand" href="/home">NYC Accessible Streets</a>
   </div>
