--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -3,10 +3,10 @@
         opacity: 1
     }
 </style>
-<nav class="navbar navbar-inverse navbar">
+<nav class="navbar navbar-inverse navbar noborder">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="nav-brand" href="/home">NYC Accessible Streets</a>
+            <a class="nav-brand" href="/">NYC Accessible Streets</a>
         </div>
         {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right">
