--- a/landing_map/templates/landing_map/landingpage.html
+++ b/landing_map/templates/landing_map/landingpage.html
@@ -18,7 +18,7 @@
 <body>
 
 <!-- navigation bar -->
-<nav class="navbar navbar-inverse navbar">
+<nav class="navbar navbar-inverse navbar noborder">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/home">NYC Accessible Streets</a>
@@ -39,7 +39,7 @@
     </div>
 </nav>
     <div class="ctain">
-        <img src="/static/img/crosswalk.png" width="100%">
+        <img src="/static/img/crosswalk.png" style="margin-top: -20px;"  width="100%">
         <div class="centered"><h1 style=font-size:200%>Find your next accessible destination.</h1>
             <button onclick="location.href = '/home';" class="btn btn-lg" type="submit">Search</button>
         </div>
