navbar formatting fixes [rounded edges, consistent height, on-hover opacity on some navbars, eliminate whitespace, spacing between nav links, eliminate black borders on nav]

--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -1,9 +1,9 @@
 <style>
     .nofade{
-        opacity: 1
+        opacity: 1 !important;
     }
 </style>
-<nav class="navbar navbar-inverse navbar">
+<nav class="navbar navbar-inverse navbar noborder">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
