--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="container-fluid">
-<nav class="navbar navbar-expand-lg navbar-light bg-custom">
+<nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
   <div class="navbar-header">
     <a class="nav-brand" href="/home">NYC Accessible Streets</a>
   </div>
@@ -55,7 +55,7 @@
                                             {{form.last_name|as_crispy_field}}
                                         </div>
                                     </div>
-                                </div> 
+                                </div>
 
                                 <div class="form-group">
                                     {{form.username|as_crispy_field}}
@@ -77,18 +77,18 @@
                                 <div class="form-group">
                                     {{form.password2|as_crispy_field}}
                                 </div>
-                                
+
                                 {% if form.errors %}
-                                    {% for field in form %} 
+                                    {% for field in form %}
                                         <p>{{field.errors}}</p>
-                                    {% endfor %} 
+                                    {% endfor %}
                                 {% endif %}
 
                                 <div class="gy-5">
                                     <div class="d-grid">
                                         <button class="btn btn-lg" type="submit">Sign Up</button>
                                     </div>
-                                    
+
                                     <div class="text-secondary text-center small mt-3">
                                         Already have an account? <a class="text-light-green" href="/accounts/login">Log In</a>
                                     </div>
@@ -104,12 +104,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
