--- a/landing_map/templates/landing_map/landingpage.html
+++ b/landing_map/templates/landing_map/landingpage.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'landing_map/style.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
 </head>
 
@@ -28,8 +30,7 @@
     </div>
 
     <div class="reports container-fluid">
-        {% include 'landing_map/detailModal.html' %}
-        <h3 style="padding: 10px;" >&nbsp;&nbsp;recent reports</h3>
+        <h3 style="padding-top: 10px;" >&nbsp;&nbsp;recent reports</h3>
 
         <div class="well well-lg col-md-4 row" style="margin: 15px;">
             <img src="/static/img/dummy_report.png" alt="dummy report image of map" 
@@ -39,19 +40,22 @@
             
             <div class="row">
                 <div class='col-md-4'>
-                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#pin_{{card.card_id}}_details"
+                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#pin_{{card.card_id}}_details"
                     style=" background-color:#884515; color:white; padding-left:15px; padding-right:15px;">
                         Inaccessible Ramp
                     </button>
+
+                    {% include 'landing_map/detailModal.html' %}
                 </div>
     
-                <div class='col-md-6' style="float: right; text-align: right; margin-top: 5px;">
+                <div class='col-md-6' style="float: right; text-align: right; margin-top: 8px;">
                     <p><span class="glyphicon glyphicon-calendar"></span> 7:20AM Oct 20th</p>
                 </div>
             </div>
         </div>
-
     </div>
+
+    {% include 'common/copyright.html' %}
 
 </body>
 </html>
