--- a/landing_map/templates/landing_map/landingpage.html
+++ b/landing_map/templates/landing_map/landingpage.html
@@ -30,29 +30,37 @@
     </div>
 
     <div class="reports container-fluid">
-        <h3 style="padding-top: 10px;" >&nbsp;&nbsp;recent reports</h3>
+        <h3 style="padding-top: 10px; padding-bottom: 10px;" >&nbsp;&nbsp;recent reports</h3>
+        
+        <div class="row" style="margin: 3px;">
+            <!-- one card -->
+            <div class="col-md-4">
+                <div class="well well-lg">
+                    <img src="/static/img/dummy_report.png" alt="dummy report image of map" 
+                        style="padding-bottom:15px; width:100%; height:auto;">
 
-        <div class="well well-lg col-md-4 row" style="margin: 15px;">
-            <img src="/static/img/dummy_report.png" alt="dummy report image of map" 
-                style="padding-bottom:15px; width:100%; height:auto;">
+                    <h4>5 Metrotech Center, Brooklyn, NY 11201</h4>
+                    
+                    <div class="row">
+                        <div class='col-md-4'>
+                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#pin_{{card.card_id}}_details"
+                            style=" background-color:#884515; color:white; padding-left:15px; padding-right:15px;">
+                                Inaccessible Ramp
+                            </button>
 
-            <h4>5 Metrotech Center, Brooklyn, NY 11201</h4>
+                            {% include 'landing_map/detailModal.html' %}
+                        </div>
             
-            <div class="row">
-                <div class='col-md-4'>
-                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#pin_{{card.card_id}}_details"
-                    style=" background-color:#884515; color:white; padding-left:15px; padding-right:15px;">
-                        Inaccessible Ramp
-                    </button>
-
-                    {% include 'landing_map/detailModal.html' %}
-                </div>
-    
-                <div class='col-md-6' style="float: right; text-align: right; margin-top: 8px;">
-                    <p><span class="glyphicon glyphicon-calendar"></span> 7:20AM Oct 20th</p>
+                        <div class='col-md-6' style="float: right; text-align: right; margin-top: 8px;">
+                            <p><span class="glyphicon glyphicon-calendar"></span> 7:20AM Oct 20th</p>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
+
+        
     </div>
 
     {% include 'common/copyright.html' %}
