--- a/landing_map/templates/landing_map/detailModal.html
+++ b/landing_map/templates/landing_map/detailModal.html
@@ -13,16 +13,17 @@
                 </div>
                 
                 <div class="col-md-6 ml-auto view-report">
-
                     <h5>issue: </h5>
-                    <p class="not_accessible">inaccessible ramp</p>
+                    <p class="not_accessible">Inaccessible {{card.type}}</p>
 
                     <h5>description: </h5>
-                    <p>street corner under construction until October 23rd, ramps are blocked</p>
+                    <p>{{card.comment}}</p>
 
                     <h5>time reported: </h5>
-                    <p>7:20AM, October 20th 2022</p>
+                    <p>{{card.time_reported}}</p>
 
+                    <h5>last updated: </h5>
+                    <p>{{card.last_update}}</p>
                 </div>  
                 
             </div>
@@ -35,9 +36,12 @@
                     <span class="glyphicon glyphicon-thumbs-up"></span>
                     1
                 </button>
-
-                <button type="button" class="btn btn-default" data-dismiss="modal" style="background-color:#4F7C5E; color:white; width: 25%">
-                    Mark as restored</button>
+                <form action = "{% url 'resolve_report' %}" method = "POST" >
+                    {% csrf_token %}
+                    <input type = "hidden" name = infraID value = '{{card.card_id}}'>
+                    <button type="submit" class="btn btn-default" style="background-color:#4F7C5E; color:white; width: 25%">
+                        Mark as restored</button>
+                </form>
             </div>
         </div>
     </div>
