--- a/landing_map/templates/landing_map/reportModal.html
+++ b/landing_map/templates/landing_map/reportModal.html
@@ -8,33 +8,19 @@
         </div>
 
         <div class="modal-body">
-          <form>
-            <div class="form-group">
-                <label class="col-form-label">Infrastructure type:</label>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        accessible ramps
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        accessible pedestrian signals
-                    </label>
-                </div>
-              </div>
-            
+          <form action = "{% url 'report' %}" method = "POST" >
+            {% csrf_token %}
             <div class="form-group">
               <label for="message-text" class="col-form-label">Description:</label>
-              <textarea class="form-control" id="message-text" style="height: 180px;"></textarea>
+              <input type = "hidden" name = infraID value = '{{card.card_id}}'>
+           <textarea name = "comment" class="form-control" id="message-text" style="height: 180px;"></textarea>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary" style=" background-color:#18435A; color:white;">
+                  Submit Report</button>
+              </div>
             </div>
           </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" data-dismiss="modal" style=" background-color:#18435A; color:white;">
-            Submit Report</button>
         </div>
       </div>
     </div>
