--- a/landing_map/templates/landing_map/myFav.html
+++ b/landing_map/templates/landing_map/myFav.html
@@ -31,6 +31,12 @@
             width:100%; 
             height:auto;
         }
+
+        form{
+            margin-bottom: 20px;
+            width: 80% !important;
+        }
+
     </style>
 </head>
 
@@ -41,6 +47,12 @@
 
 <div class="reports container-fluid">
     <h3>&nbsp;&nbsp;My Favorites</h3>
+
+    <!-- search bar -->
+    <form class="col-md-12" method="GET" action="" >
+        <input class="form-control" type="search" name="search" 
+        placeholder="Search by address..."> 
+    </form>
     
     <div class="row" style="margin: 3px;">
         <!-- one card -->
