--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -7,6 +7,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
+            <a class="nav-list" href="/lowvision"> <span class="glyphicon glyphicon-eye-close"></span> Low Vision View</a>
         </div>
         {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right">
