Low Vision page changes part 2 Changed highlight card styling

--- a/landing_map/templates/landing_map/lowVisionView.html
+++ b/landing_map/templates/landing_map/lowVisionView.html
@@ -60,8 +60,13 @@
       </div>
 
       <!-- alternate view -->
-      <div class="col-md-8 cards">
+      <div class="col-md-8">
+         <div class="row">
+           <p>Showing results near:<br> <span style="font-weight: bold"> {{locationAddress}} </span> </p>
+        </div>
+        <div class="row table-lowvision">
           {% include 'landing_map/lowVisionTable.html' %}
+        </div>
       </div>
 </div>
 
