--- a/landing_map/templates/landing_map/lowVisionTable.html
+++ b/landing_map/templates/landing_map/lowVisionTable.html
@@ -1,5 +1,5 @@
 <table class="table table-hover">
-  <thead class="thead-light">
+  <thead class="thead-light table-header">
     <tr>
       <th scope="col">#</th>
       <th scope="col">Location</th>
@@ -9,12 +9,16 @@
   </thead>
   <tbody>
 
-   {% for accessible_location in accessible_locations %}
-    <tr>
-      <th scope="row">1</th>
-      <td>{{accessible_location.locationX}}</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+   {% for card in cardList %}
+    <tr onclick="highlight_card({{card.card_id}})">
+      <th scope="row">{{forloop.counter}}</th>
+      <td>{{card.text}}</td>
+      <td>{{card.type}}</td>
+      {% if card.isAccessible %}
+        <td>Yes</td>
+      {% else %}
+        <td>No</td>
+      {% endif %}
     </tr>
    {% endfor %}
   </tbody>
