Issue84 sarthak alternative view (#127)
* Low Vision page changes part 1

* Low Vision page changes part 2
Changed highlight card styling

--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -7,6 +7,14 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
+            {% if '/home/' in request.path %}
+                <a class="nav-list" href="/lowvision"><span class="glyphicon glyphicon-eye-close"></span> Low Vision View</a>
+            {% endif %}
+            {% if '/lowvision/' in request.path %}
+                <a class="nav-list" href="/home"><span class="glyphicon glyphicon-map-marker"></span> Map View</a>
+            {% endif %}
+
+
         </div>
         {% if user.is_authenticated %}
         <ul class="nav navbar-nav navbar-right">
