fixed report issues bug

--- a/landing_map/templates/landing_map/cardDetails.html
+++ b/landing_map/templates/landing_map/cardDetails.html
@@ -32,7 +32,7 @@
                 </button>
             {% endif %}
             {% if card.isAccessible %}
-                <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#report_issue_form"
+                <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#report_issue_form_{{card.card_id}}"
                         style=" background-color:#18435A; color:white">
                     report issue
                 </button>
