--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -33,17 +33,8 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-8">
           {% include 'landing_map/filterButton.html' %}
-        </div>
-
-        <div class="col-md-4">
-          <div class="add">
-            <button type="button" class="btn btn-primary">
-              <span class="glyphicon glyphicon-star" style="top: 2px;"></span> 
-              add to favorite 
-            </button>
-          </div>
         </div>
 
         <div class="col-md-4">
@@ -61,7 +52,24 @@
 
       <!-- map -->
       <div class="col-md-8">
-        <div id="map"></div>
+        <div class="row">
+          <div class="col-md-9">
+           <p>Showing results near:<br> <span style="font-weight: bold"> {{locationAddress}} </span> </p>
+          </div>
+
+          <div class="col-md-3">
+            <div class="add">
+              <button type="button" class="btn btn-primary">
+                <span class="glyphicon glyphicon-star"></span>
+                add address to favorite
+              </button>
+            </div>
+          </div>
+
+        </div>
+        <div class="row">
+          <div id="map"></div>
+        </div>
       </div>
 </div>
 
