--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -24,7 +24,7 @@
 <body class="container-fluid">
 <nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
   <div class="navbar-header">
-    <a class="nav-brand" href="/home">NYC Accessible Streets</a>
+    <a class="nav-brand" href="/">NYC Accessible Streets</a>
   </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
