--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -57,19 +57,29 @@
            <p>Showing results near:<br> <span style="font-weight: bold"> {{locationAddress}} </span> </p>
           </div>
 
-          <div class="col-md-3">
-            <div class="add">
-              <form action = "{% url 'add_favorite' %}" method = "POST" >
-                {% csrf_token %}
-                <input type = "hidden" name = x_coord value = '{{x_coord}}'>
-                <input type = "hidden" name = y_coord value = '{{y_coord}}'>
-                <input type = "hidden" name = address value = '{{locationAddress}}'>
+          {% if favorited %}
+            <div class="col-md-3">
+              <div class="add">
                 <button type="submit" class="btn btn-default" >
                   <span class="glyphicon glyphicon-star"></span>
-                    add address to favorites</button>
-            </form>
+                    Address Favorited!</button>
+              </div>
             </div>
-          </div>
+            {% else %}
+              <div class="col-md-3">
+                <div class="add">
+                  <form action = "{% url 'add_favorite' %}" method = "POST" >
+                    {% csrf_token %}
+                    <input type = "hidden" name = x_coord value = '{{x_coord}}'>
+                    <input type = "hidden" name = y_coord value = '{{y_coord}}'>
+                    <input type = "hidden" name = address value = '{{locationAddress}}'>
+                    <button type="submit" class="btn btn-default" >
+                      <span class="glyphicon glyphicon-star-empty"></span>
+                        add address to favorites</button>
+                </form>
+                </div>
+              </div>
+              {% endif %}
 
         </div>
         <div class="row">
