--- a/landing_map/templates/landing_map/myFav.html
+++ b/landing_map/templates/landing_map/myFav.html
@@ -65,6 +65,7 @@
                 
                 <div class="row">
                     <div class='col-md-6' style="float: left; text-align: left; margin-top: 8px;">
+                        <p class="not_accessible" style="margin-bottom: 2px;"> {{card.alert}}</p>
                         <p class="accessible" style="margin-bottom: 2px;"> {{card.count_signals}} accessible signals</p>
                         <p class="accessible"> {{card.count_ramps}} accessible ramp</p>
                     </div>
@@ -72,6 +73,16 @@
                     <div class='col-md-6'>
                         <button type="button" class="btn btn-default" onclick='' type="submit"> 
                             View Location </button>
+                    </div>
+                    <div class = 'col-md-6'>
+                        <form action = "{% url 'remove_favorite' %}" method = "POST" >
+                            {% csrf_token %}
+                            <input type = "hidden" name = y value = '{{card.y}}'>
+                            <input type = "hidden" name = x value = '{{card.x}}'>
+                            <input type = "hidden" name = address value = '{{card.address}}'>
+                            <button type="submit" class="btn btn-default" >
+                                Remove Favorite</button>
+                        </form>
                     </div>
                     
                 </div>
