--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -56,31 +56,25 @@
           <div class="col-md-9">
            <p>Showing results near:<br> <span style="font-weight: bold"> {{locationAddress}} </span> </p>
           </div>
-
-          {% if favorited %}
             <div class="col-md-3">
               <div class="add">
-                <button type="submit" class="btn btn-default" >
-                  <span class="glyphicon glyphicon-star"></span>
-                    Address Favorited!</button>
+                <form action = "{% url 'add_favorite' %}" method = "POST" >
+                  {% csrf_token %}
+                  <input type = "hidden" name = x_coord value = '{{x_coord}}'>
+                  <input type = "hidden" name = y_coord value = '{{y_coord}}'>
+                  <input type = "hidden" name = address value = '{{locationAddress}}'>
+                  {% if favorited %}
+                    <button type="button" class="btn btn-default" >
+                      <span class="glyphicon glyphicon-star"></span>
+                        Address Favorited!</button>
+                  {% else %}
+                    <button type="submit" class="btn btn-default" >
+                    <span class="glyphicon glyphicon-star-empty"></span>
+                      add address to favorites</button>
+                  {% endif %}
+              </form>
               </div>
             </div>
-            {% else %}
-              <div class="col-md-3">
-                <div class="add">
-                  <form action = "{% url 'add_favorite' %}" method = "POST" >
-                    {% csrf_token %}
-                    <input type = "hidden" name = x_coord value = '{{x_coord}}'>
-                    <input type = "hidden" name = y_coord value = '{{y_coord}}'>
-                    <input type = "hidden" name = address value = '{{locationAddress}}'>
-                    <button type="submit" class="btn btn-default" >
-                      <span class="glyphicon glyphicon-star-empty"></span>
-                        add address to favorites</button>
-                </form>
-                </div>
-              </div>
-              {% endif %}
-
         </div>
         <div class="row">
           <div id="map"></div>
