fixed css of geocoder suggestions box

--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -186,3 +186,7 @@ div.table-lowvision{
     border: 3px solid red !important;
     border-radius: 7px !important;
 }
+
+.suggestions-wrapper{
+    text-align: left;
+}
