minor changes on password_reset_sent html

--- a/accounts/templates/password_reset_sent.html
+++ b/accounts/templates/password_reset_sent.html
@@ -21,12 +21,12 @@
                                 <body>
                                     <h3>Password reset sent</h3>
 
-                                    <p>We've emailed you instructions for setting your password. </p>
+                                    <p>We've emailed you instructions to reset your password. </p>
                                     <p>If an account exists with the email you
-                                        entered. You should recieve them shortly.</p>
+                                        entered, you should receive them shortly.</p>
 
-                                    <p>If you don't recieve an email, please make sure you've entered the address you registered with,
-                                        and check your spam folder</p>
+                                    <p>If you don't receive an email, please make sure you've entered the address you registered with,
+                                        and check your spam folder.</p>
                                 </body>
                             </div>
                         </div>
