--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -190,3 +190,7 @@ div.table-lowvision{
 .suggestions-wrapper{
     text-align: left;
 }
+
+.deleteButton{
+    background-color: #d9534f !important;
+}
