--- a/landing_map/templates/landing_map/myFav.html
+++ b/landing_map/templates/landing_map/myFav.html
@@ -58,16 +58,6 @@
         {% for card in favorite_card_list %}
         <!-- one card -->
         <div class="col-md-4">
-            <div class='col-md-6' style = "margin-bottom: 8px">
-                <form action = "{% url 'remove_favorite' %}" method = "POST" >
-                    {% csrf_token %}
-                    <input type = "hidden" name = y value = '{{card.y}}'>
-                    <input type = "hidden" name = x value = '{{card.x}}'>
-                    <input type = "hidden" name = address value = '{{card.address}}'>
-                    <button type="submit" class="btn btn-sm" >
-                        Remove Favorite</button>
-                </form>
-            </div>
             <div class="well well-lg">
                 <img src="/static/img/dummy_report.png" alt="dummy report image of map">
 
@@ -84,10 +74,29 @@
                         <p class="accessible"> {{card.count_ramps}} accessible ramp</p>
                     </div>
 
-                    <div class='col-md-6'>
-                        <button type="button" class="btn btn-default" onclick='' type="submit"> 
-                            View Location </button>
-                    </div>     
+                    <div class='col-md-3'>
+                            <form action = "{% url 'goto_favorite' %}" method = "POST" >
+                                {% csrf_token %}
+                                <input type = "hidden" name = y value = '{{card.y}}'>
+                                <input type = "hidden" name = x value = '{{card.x}}'>
+                                <button type="submit" class="btn btn-default"> <span class="glyphicon glyphicon-eye-open"></span>
+                                    View</button>
+                            </form>
+                    </div>
+
+
+                    <div class='col-md-3'>
+                            <form action = "{% url 'remove_favorite' %}" method = "POST" >
+                                {% csrf_token %}
+                                <input type = "hidden" name = y value = '{{card.y}}'>
+                                <input type = "hidden" name = x value = '{{card.x}}'>
+                                <input type = "hidden" name = address value = '{{card.address}}'>
+                                <button type="submit" class="btn btn-danger deleteButton" ><span class="glyphicon glyphicon-trash"></span>
+                                    Remove</button>
+                            </form>
+
+                    </div>
+
                 </div>
             </div>
         </div>
