--- a/landing_map/templates/landing_map/lowVisionView.html
+++ b/landing_map/templates/landing_map/lowVisionView.html
@@ -59,10 +59,21 @@
 
           <div class="col-md-3">
             <div class="add">
-              <button type="button" class="btn btn-primary">
-                <span class="glyphicon glyphicon-star"></span>
-                add address to favorite
-              </button>
+              <form action = "{% url 'add_favorite' %}" method = "POST" >
+                  {% csrf_token %}
+                  <input type = "hidden" name = x_coord value = '{{x_coord}}'>
+                  <input type = "hidden" name = y_coord value = '{{y_coord}}'>
+                  <input type = "hidden" name = address value = '{{locationAddress}}'>
+                  {% if favorited %}
+                    <button type="button" class="btn btn-default" >
+                      <span class="glyphicon glyphicon-star"></span>
+                        Address Favorited!</button>
+                  {% else %}
+                    <button type="submit" class="btn btn-default" >
+                    <span class="glyphicon glyphicon-star-empty"></span>
+                      add address to favorites</button>
+                  {% endif %}
+              </form>
             </div>
           </div>
 
