--- a/landing_map/templates/landing_map/myFav.html
+++ b/landing_map/templates/landing_map/myFav.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+      <!-- Mapbox CDN-->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
+    <script type="text/javascript">
+        mapboxgl.accessToken = '{{mapboxAccessToken}}';
+    </script>
 
     <style>
         h3{
@@ -56,10 +61,21 @@
     
     <div class="row" style="margin: 3px;">
         {% for card in favorite_card_list %}
-        <!-- one card -->
         <div class="col-md-4">
             <div class="well well-lg">
-                <img src="/static/img/dummy_report.png" alt="dummy report image of map">
+                <div id="map_{{card.id}}" style="height: 250px;"></div>
+                <script>
+
+                    new mapboxgl.Marker()
+                    .setLngLat(['{{card.x}}','{{card.y}}'])
+                    .addTo(new mapboxgl.Map({
+                        container: 'map_{{card.id}}',
+                        style: 'mapbox://styles/mapbox/streets-v11',
+                        center: ['{{card.x}}','{{card.y}}'],
+                        zoom: 15,
+                        marker: true
+                    }));
+                </script>
 
                 <h4>{{card.address}}</h4>
                 
